--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Yeni Yıl Sürprizi</title>
 
 <style>
@@ -53,75 +53,45 @@ body {
   opacity: 1;
 }
 
-.flower, .confetti, .rabbit {
+.flower, .rabbit {
   position: absolute;
   pointer-events: none;
-}
-
-/* 🔊 Küçük ses aç butonu */
-#unmuteBtn {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  padding: 10px 14px;
-  border-radius: 50px;
-  border: none;
-  background: rgba(0,0,0,0.65);
-  color: white;
-  font-size: 14px;
-  z-index: 30;
-  display: none;
 }
 </style>
 </head>
 
 <body>
 <div id="app">
-  <button id="startBtn">Yeni Yıl Sürprizi 🎁</button>
+  <button id="startBtn">🎁 Yeni Yıl Sürprizi</button>
 
   <div id="msg" class="message">
-    🎆 Mutlu Yıllar! 🎆<br />
+    🎆 Mutlu Yıllar! 🎆<br>
     Sağlık, mutluluk ve başarı seninle olsun
   </div>
 </div>
 
-<!-- 🎵 YouTube (1x1 px ama DOM'da görünür) -->
-<div style="
-  position: fixed;
-  bottom: 10px;
-  left: 10px;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-">
-  <iframe
-    id="yt"
-    width="1"
-    height="1"
-    frameborder="0"
-    allow="autoplay; encrypted-media"
-    playsinline>
-  </iframe>
-</div>
-
-<button id="unmuteBtn" onclick="unmute()">🔊 Sesi Aç</button>
+<!-- 🎵 YouTube (Safari uyumlu) -->
+<iframe
+  id="yt"
+  style="position:fixed; bottom:10px; left:10px; width:1px; height:1px; opacity:0"
+  allow="autoplay; encrypted-media"
+  playsinline>
+</iframe>
 
 <script>
 const app = document.getElementById("app");
 const btn = document.getElementById("startBtn");
 const msg = document.getElementById("msg");
 const yt = document.getElementById("yt");
-const unmuteBtn = document.getElementById("unmuteBtn");
 
-/* 🎵 Lady Gaga – Judas (35. saniye) */
+/* 🎵 Lady Gaga – Judas (35. saniyeden, SESLİ) */
 const YT_URL =
   "https://www.youtube.com/embed/wagn8Wrmzuc" +
   "?autoplay=1" +
-  "&mute=1" +
   "&start=35" +
   "&playsinline=1";
 
-/* 🌸 Çiçek loop */
+/* 🌸 Çiçek yağmuru */
 function flowerLoop() {
   setInterval(() => {
     const f = document.createElement("div");
@@ -144,58 +114,27 @@ function flowerLoop() {
   }, 250);
 }
 
-/* 🎆 Konfeti loop */
-function confettiLoop() {
+/* 🐰 Tavşan yağmuru (çiçek gibi) */
+function rabbitLoop() {
   setInterval(() => {
-    const c = document.createElement("div");
-    c.className = "confetti";
-    c.textContent = "🎉";
-    c.style.left = Math.random() * 100 + "vw";
-    c.style.top = "-30px";
-    app.appendChild(c);
+    const r = document.createElement("div");
+    r.className = "rabbit";
+    r.textContent = "🐰";
+    r.style.fontSize = "36px";
+    r.style.left = Math.random() * 100 + "vw";
+    r.style.top = "-50px";
+    app.appendChild(r);
 
-    const a = c.animate(
-      [
-        { transform: "translateY(0) rotate(0)" },
-        { transform: "translateY(110vh) rotate(720deg)" }
-      ],
-      { duration: 3000 }
-    );
-
-    a.onfinish = () => c.remove();
-  }, 200);
-}
-
-/* 🐰 Tavşan */
-function rabbit(y, delay) {
-  const r = document.createElement("div");
-  r.className = "rabbit";
-  r.textContent = "🐰";
-  r.style.fontSize = "40px";
-  r.style.bottom = y + "px";
-  r.style.left = "-60px";
-  app.appendChild(r);
-
-  function run() {
     const a = r.animate(
       [
-        { transform: "translateX(0) scaleX(1)" },
-        { transform: "translateX(90vw) scaleX(1)" },
-        { transform: "translateX(90vw) scaleX(-1)" },
-        { transform: "translateX(0) scaleX(-1)" }
+        { transform: "translateY(0)", opacity: 0 },
+        { transform: "translateY(110vh)", opacity: 1 }
       ],
-      { duration: 3500, easing: "linear" }
+      { duration: 4500 }
     );
-    a.onfinish = run;
-  }
 
-  setTimeout(run, delay);
-}
-
-/* 🔊 Ses aç */
-function unmute() {
-  yt.src = yt.src.replace("mute=1", "mute=0");
-  unmuteBtn.remove();
+    a.onfinish = () => r.remove();
+  }, 400);
 }
 
 /* ▶️ Başlat */
@@ -203,15 +142,11 @@ btn.addEventListener("click", () => {
   btn.remove();
   msg.classList.add("show");
 
+  // 🔊 Safari uyumlu: SESLİ başlat
   yt.src = YT_URL;
-  unmuteBtn.style.display = "block";
 
   flowerLoop();
-  confettiLoop();
-
-  rabbit(30, 0);
-  rabbit(70, 500);
-  rabbit(110, 1000);
+  rabbitLoop();
 });
 </script>
 </body>
