--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>🎁 Yeni Yıl Sürprizi</title>
+  <title>🎁 Yeni Yıl Sürprizi </title>
 
   <style>
     html, body {
@@ -88,8 +88,8 @@
 <body>
 
   <div id="center">
-    <button id="startBtn">🎁 Yeni Yıl Sürprizi</button>
-    <div id="message">🎆 Mutlu Yıllar 🎆</div>
+    <button id="startBtn">🎁 Sürpriz için Tıkla </button>
+    <div id="message">🎆 Herkes yeni yıla sen yıllarıma, Mutlu Yıllar 🎆</div>
   </div>
 
   <!-- 🎵 YouTube Player -->
